# skillkit

./: .gitignore  CLAUDE.md  DESIGN.md  LICENSE  README.md  pyproject.toml  skillkit-build-spec.md  skillkit.yaml
examples/customer_support/: classify_inquiry.md  escalate_ticket.md  handle_refund.md  summarize_interaction.md
examples/devops/: analyze_logs.md  classify_alert.md  diagnose_outage.md  generate_postmortem.md
examples/research/: assess_evidence_quality.md  compare_studies.md  extract_methodology.md  summarize_paper.md
skillkit/: __init__.py  app.py  config.py  coverage.py  gap_analysis.py  overlap.py  skill_parser.py  stub_generator.py  ui_components.py
tests/: conftest.py  test_app_smoke.py  test_config.py  test_coverage.py  test_gap_analysis.py  test_integration.py  test_overlap.py  test_skill_parser.py  test_stub_generator.py
